add trivial test
to print apiBaseUrl SSM parameter